Fix header width on Mobile browsers

--- a/css/style-mobile.scss
+++ b/css/style-mobile.scss
@@ -43,9 +43,8 @@ header {
     padding-left: 1.5em;
     padding-right: 1.5em;
 
-    &:before,
-    &:after {
-      width: 38%;
+    &:before, &:after {
+      width: 35%;
     }
 
     .icon {
